fix button spacing in upgrade page

--- a/src/styles/modules/upgrade.scss
+++ b/src/styles/modules/upgrade.scss
@@ -32,6 +32,7 @@ h3.upgrade--subhead {
 	height: 50px;
 	width: 197px;
 	margin: 8% auto 15px;
+	font-size: 0;
 }
 
 
@@ -43,6 +44,7 @@ h3.upgrade--subhead {
 	min-width: 92px;
 	margin: 0;
 	background-color: #fff;
+	font-size: 14px;
 }
 
 .upgrade--plan > button.yearly {
@@ -53,6 +55,7 @@ h3.upgrade--subhead {
 	min-width: 92px;
 	margin: 0;
 	background-color: #fff;
+	font-size: 14px;
 }
 
 button.yearly:after {
